enter to submit option

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
       <div id="game">
         <div id="question-container">
           <h2 id="question"></h2>
-          <input type="text" id="answer" autofocus>
+          <input type="text" id="answer" autofocus onkeydown="if (event.keyCode == 13) checkAnswer()">
           <button id="submit-button" onclick="checkAnswer()">Submit</button>
         </div>
         <div id="feedback-container">
+          <p id="feedback"></p>
+          <button id="next-button" onclick="nextQuestion()">Next Question</button>
+        </div>
+        <div id="feedback-container">
+           
           <h2 id="feedback"></h2>
         </div>
         <div id="score-container">
