end game fuction

--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
         </div>
       </div>
       <div id="story">
-        <img id="ufo" src="/images/ufo.jpg">
-        <img id="cow" src="/images/cow.jpg">
-      <p id="story-text"></p>
+       
+          <img src="/images/ufo.jpg" alt="UFO" id="ufo">
+          <img src="/images/cow.jpg" alt="Cow" id="cow">
+     
+        </div>        
+      <p id="story-text">Gamma Productions Presents...</p>
       </div>
     </div>
     <script src="/main.js/script.js"></script>
